# ecodata

./: .gitignore  .readthedocs.yaml  README.md  ecodata-dev-env.yml  ecodata-env.yml  environment-clean-build.yml  environment-m1-lock.yml  environment-win-lock.yml  environment-x86-lock.yml  pymovebank-clean-build-env.yml  pymovebank-dev-env.yml  pymovebank-env.yml  pyproject.toml  setup.cfg  setup.py  tasks.py
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci_conda_constructor.yml  ci_deploy_mac.yml  ci_deploy_win.yml  ci_linux.yml  ci_mac.yml  ci_win.yml  gh_pages.yml
apps/: selector_gui.ipynb
apps/scripts/: aggregator.py  construct.yaml  gridded_data_gui.py  post_install.sh  selector_gui.py  subsetter_gui_newest.py  tracks_explorer.py
docs/: Makefile  build_docs.sh  conf.py  dev-requirements.yml  developing.rst  index.ipynb  pymovebank.rst  subset_function.rst
docs/apps/: apps_user_guide.md  conf.py  developer_guide.md  environment_files.rst  environmental_data.md  index.md  index.rst  installation.md  installation.rst  support.md  user_guide.md  user_guide.rst
docs/apps/user_guide/: gridded_data_explorer.md  index.md  movie_maker.md  subsetter.md  tracks_explorer.md
docs/examples/: roads_global_subset_speedtest.ipynb  thin_dataset.ipynb  time_selection.ipynb
docs/package/: conf.py  developing.rst  examples.rst  index.ipynb  pymovebank.rst  subset_function.rst
docs/package/examples/: coarsen_dataset.ipynb  roads_global_subset_speedtest.ipynb  thin_dataset.ipynb  time_selection.ipynb
docs/package/user_guide/: getting_started.md
docs/user_guide/: features.rst  getting_started.md  index.rst
ecodata/: __init__.py  functions.py  panel_utils.py  plotting.py  raster_utils.py  timeSample.ipynb  xr_tools.py
ecodata/app/: __main__.py  application.py  config.py  models.py
ecodata/app/apps/: __init__.py  gridded_data_explorer_app.py  home.py  movie_maker_app.py  subsetter_app.py  timeExtractor.py  time_extractor_app.py  tracks_explorer_app.py
ecodata/app/assets/: __init__.py  list_item_template.html
ecodata/datasets/: __init__.py  dataset_utils.py
ecodata/tests/: conftest.py  test_apps.py  test_dataset_utils.py  test_movie_maker.py
modis_ndvi_tif/: MOD13A1.006__500m_16_days_NDVI_doy2020353_aid0001.tif  MOD13A1.006__500m_16_days_NDVI_doy2021001_aid0001.tif  MOD13A1.006__500m_16_days_NDVI_doy2021017_aid0001.tif  MOD13A1.006__500m_16_days_NDVI_doy2021033_aid0001.tif  MOD13A1.006__500m_16_days_NDVI_doy2021049_aid0001.tif  MOD13A1.006__500m_16_days_NDVI_doy2021081_aid0001.tif  MOD13A1.006__500m_16_days_NDVI_doy2021097_aid0001.tif  MOD13A1.006__500m_16_days_NDVI_doy2021113_aid0001.tif  MOD13A1.006__500m_16_days_NDVI_doy2021129_aid0001.tif  MOD13A1.006__500m_16_days_NDVI_doy2021161_aid0001.tif  MOD13A1.006__500m_16_days_NDVI_doy2021193_aid0001.tif  MOD13A1.006__500m_16_days_NDVI_doy2021209_aid0001.tif  MOD13A1.006__500m_16_days_NDVI_doy2021225_aid0001.tif  MOD13A1.006__500m_16_days_NDVI_doy2021241_aid0001.tif  MOD13A1.006__500m_16_days_NDVI_doy2021289_aid0001.tif  MOD13A1.006__500m_16_days_NDVI_doy2021305_aid0001.tif  MOD13A1.006__500m_16_days_NDVI_doy2021321_aid0001.tif  dataDirFilesMine.txt  output.txt
pymovebank/: __init__.py  functions.py  panel_utils.py  plotting.py  xr_tools.py
pymovebank/app/: README.md  README.txt  __main__.py  config.py  models.py
pymovebank/app/apps/: __init__.py  gridded_data_explorer_app.py  home.py  movie_maker_app.py  subsetter_app.py  tracks_explorer_app.py
pymovebank/app/assets/: __init__.py  config.yaml  main_menu.html
pymovebank/app/models/: config.py  models.py
pymovebank/apps/: README.md  config.py  gridded_data_explorer.py  models.py  subsetter.py  tracks_explorer.py
pymovebank/apps/apps/: gridded_data_explorer.py  gridded_data_explorer_app.py  home.py  subsetter.py  subsetter_app.py  tracks_explorer.py  tracks_explorer_app.py
pymovebank/apps/assets/: __init__.py  config.yaml  fast.css  list_item_template.html  main_menu.html
pymovebank/apps/models/: config.py  models.py
pymovebank/datasets/: __init__.py  dataset_utils.py
pymovebank/tests/: conftest.py  test_apps.py  test_dataset_utils.py  test_movie_maker.py
scripts/: build.bat  build.ps1  build.sh  call_subset.sh  construct.yaml  construct_ex.yaml  environment.yaml  post_install.bat  post_install.sh  print_ecodata_ver.py  subset_script.py  subset_script.spec
src/ecodata/: __init__.py  xr_tools.py
src/ecodata/app/: application.py
src/ecodata/app/apps/: gridded_data_explorer_app.py  home.py
