[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ecodata"
dynamic = ["version"]
description = ""
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "xarray",
    "cfgrib",
    "geopandas",
    "shapely",
    "matplotlib",
    "pandas",
    "cartopy",
    "ipython",
    "ipykernel",
    "wget",
    "gdown",
    "requests",
    "datasize",
    "click",
]

[tool.setuptools]
packages = ["ecodata"]

[tool.setuptools_scm]
write_to = "ecodata/__version__.py"

[tool.setuptools.package-data]
"ecodata.datasets" = [
    "small_datasets/*.csv",
    "small_datasets/*.gdb/*",
    "small_datasets/*.shp",
]
"*" = [
    "*.yaml",
    "*.css",
    "*.html"
]


[tool.isort]
profile = "black"
multi_line_output = 3
skip_glob = ["*env*/*"]


[tool.black]
line-length = 120
experimental-string-processing = true
# This is a regular expression (hence the \. is escaping the ., and not a literal \.)
exclude = '''
(
    /(\.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | .*env.*
    | _build
    | buck-out
    | build
    | dist
    | docs/*
    )
)
'''

[tool.jupytext]
formats = "apps/notebooks///ipynb,apps/scripts///py:percent"