[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ecodata"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = ""
classifiers = [
    "Programming Language :: Python :: 3"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/ecodata/__version__.py"

[tool.setuptools.package-data]
"ecodata.datasets" = [
    "small_datasets/*.csv",
    "small_datasets/*.gdb/*",
    "small_datasets/*.shp",
]
"*" = [
    "*.yaml",
    "*.css",
    "*.html"
]


[tool.isort]
profile = "black"
multi_line_output = 3
skip_glob = ["*env*/*"]


[tool.black]
line-length = 120
experimental-string-processing = true
# This is a regular expression (hence the \. is escaping the ., and not a literal \.)
exclude = '''
(
    /(\.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | .*env.*
    | _build
    | buck-out
    | build
    | dist
    | docs/*
    | scratch/*
    )
)
'''
[tool.flakeheaven]
# 80 chars aren't enough in 21 century
max_line_length = 120
# show line of source code in output
show_source = true

exclude = [
    "scratch",
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    "tests",
    "venv",
    ".ipynb_checkpoints"
]

# list of plugins and rules for them
[tool.flakeheaven.plugins]
pyflakes = ["+*"]
# all pycodestyle except line break before binary operator because we use binary break after line break as recommended
# And ignore module level imports not at top of file because of jupyter notebook examples
pycodestyle = ["+*", "-W503", "-E402"]

[tool.jupytext]
formats = "apps/notebooks///ipynb,apps/scripts///py:percent"