[metadata]
name = pymovebank
description = ''
author = Justine Missik
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir = = pymovebank
include_package_data = True
install_requires =
    xarray
    cfgrib
    geopandas
    shapely
    matplotlib
    pandas
    cartopy
    ipython
    ipykernel
    wget
    requests
    datasize

[options.packages.find]
where = src
exclude = pymovebank/large_datasets/