[metadata]
name = pymovebank
description = ''
author = Justine Missik
classifiers =
    Programming Language :: Python :: 3

[options]
packages = pymovebank, pymovebank.datasets
install_requires =
    xarray
    cfgrib
    geopandas
    shapely
    matplotlib
    pandas
    cartopy
    ipython
    ipykernel
    wget
    requests
    datasize
    click

[options.package_data]
pymovebank.datasets = small_datasets/*.csv, small_datasets/*.gdb/*, small_datasets/*.shp
