[metadata]
name = pymovebank
description = ''
author = Justine Missik
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    xarray
    cfgrib
    geopandas
    shapely
    matplotlib
    pandas
    cartopy
    ipython
    ipykernel
    wget
    gdown
    requests
    datasize
    click

[options.package_data]
pymovebank.datasets = small_datasets/*.csv, small_datasets/*.gdb/*, small_datasets/*.shp
* = *.yaml, *.css, *.html
